# 42_Filler

./: .gitignore  .gitmodules  CMakeLists.txt  start_filler.sh
res/logs/: abanlin-carli.map00.log.txt  champely-grati.map01.log.txt
src/: filler.h  init.c  main.c  utils.c
vis/: README.md  pubspec.yaml
vis/android/app/: build.gradle
vis/android/app/src/main/: AndroidManifest.xml
vis/android/app/src/main/kotlin/com/example/flutter_filler_2/: MainActivity.kt
vis/android/app/src/profile/: AndroidManifest.xml
vis/ios/Runner/: Info.plist
vis/ios/Runner.xcodeproj/: project.pbxproj
vis/lib/: ColorHarmonies.dart  FillerImage.dart  FillerReader.dart  PickerBridge.dart  README_FILLER_READER.md  const.dart  filler_page.dart  filler_reader.dart  main.dart  table.dart
vis/lib/extensions/: color_harmonies.dart  material_color_creator.dart  periodic_shift.dart  string_starts_switch.dart
vis/linux/: .gitignore  CMakeLists.txt  my_application.cc
vis/test/: periodic_shift_test.dart  widget_test.dart
vis/web/: index.html  manifest.json
